// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/pagination/demo/basic.md correctly 1`] = `
<ul
  class="ant-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-disabled ant-pagination-prev"
    title="Previous Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      disabled=""
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        1
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        2
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        3
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        4
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        5
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/changer.md correctly 1`] = `
<ul
  class="ant-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        1
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        2
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        3
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        4
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        5
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a
        class="ant-pagination-item-link"
      >
        •••
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        50
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-options"
  >
    <div
      class="ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
    >
      <div
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="true"
        class="ant-select-selection
            ant-select-selection--single"
        role="combobox"
        tabindex="0"
      >
        <div
          class="ant-select-selection__rendered"
        >
          <div
            class="ant-select-selection-selected-value"
            style="opacity:1"
            title="10"
          >
            10
          </div>
          <span
            class="ant-select-arrow"
            style="user-select:none;-webkit-user-select:none"
            unselectable="unselectable"
          >
            <i
              class="icon icon-arrow_drop_down"
            />
            <b />
          </span>
        </div>
      </div>
      <div
        class="ant-select-underline"
      >
        <span
          class="ant-select-ripple"
        />
      </div>
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/controlled.md correctly 1`] = `
<ul
  class="ant-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        1
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        2
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3 ant-pagination-item-active"
    tabindex="0"
    title="3"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        3
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        4
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        5
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/itemRender.md correctly 1`] = `
<ul
  class="ant-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="true"
    class="ant-pagination-disabled ant-pagination-prev"
    title="Previous Page"
  >
    <a>
      Previous
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
    tabindex="0"
    title="1"
  >
    <a>
      1
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2"
    tabindex="0"
    title="2"
  >
    <a>
      2
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <a>
      3
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <a>
      4
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <a>
      5
    </a>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <a
      class="ant-pagination-item-link"
    >
      •••
    </a>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <a>
      50
    </a>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <a>
      Next
    </a>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/jump.md correctly 1`] = `
<ul
  class="ant-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        1
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-2 ant-pagination-item-active"
    tabindex="0"
    title="2"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        2
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-3"
    tabindex="0"
    title="3"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        3
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4"
    tabindex="0"
    title="4"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        4
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="5"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        5
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a
        class="ant-pagination-item-link"
      >
        •••
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        50
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-options"
  >
    <div
      class="ant-pagination-options-quick-jumper"
    >
      Goto
      <input
        type="text"
        value=""
      />
    </div>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/more.md correctly 1`] = `
<ul
  class="ant-pagination"
  unselectable="unselectable"
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-1"
    tabindex="0"
    title="1"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        1
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-jump-prev"
    tabindex="0"
    title="Previous 5 Pages"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a
        class="ant-pagination-item-link"
      >
        •••
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-4 ant-pagination-item-after-jump-prev"
    tabindex="0"
    title="4"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        4
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-5"
    tabindex="0"
    title="5"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        5
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-6 ant-pagination-item-active"
    tabindex="0"
    title="6"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        6
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-7"
    tabindex="0"
    title="7"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        7
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-8 ant-pagination-item-before-jump-next"
    tabindex="0"
    title="8"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        8
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-jump-next"
    tabindex="0"
    title="Next 5 Pages"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a
        class="ant-pagination-item-link"
      >
        •••
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-item ant-pagination-item-50"
    tabindex="0"
    title="50"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-flat"
      type="button"
    >
      <a>
        50
      </a>
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/simple.md correctly 1`] = `
<ul
  class="ant-pagination ant-pagination-simple "
>
  <li
    aria-disabled="false"
    class=" ant-pagination-prev"
    tabindex="0"
    title="Previous Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
  <li
    class="ant-pagination-simple-pager"
    title="2/5"
  >
    <input
      size="3"
      type="text"
      value="2"
    />
    <span
      class="ant-pagination-slash"
    >
      ／
    </span>
    5
  </li>
  <li
    aria-disabled="false"
    class=" ant-pagination-next"
    tabindex="0"
    title="Next Page"
  >
    <button
      class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
      <div
        class="ant-ripple-wrapper"
      />
    </button>
  </li>
</ul>
`;

exports[`renders ./components/pagination/demo/size.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination ant-pagination-large"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-lg ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-lg ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-large"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-lg ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-lg ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-options"
    >
      <span
        class="ant-pagination-options-label"
      >
        Items / page
      </span>
      <div
        class="ant-select-lg ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="opacity:1"
              title="10"
            >
              10
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <i
                class="icon icon-arrow_drop_down"
              />
              <b />
            </span>
          </div>
        </div>
        <div
          class="ant-select-underline"
        >
          <span
            class="ant-select-ripple"
          />
        </div>
      </div>
      <div
        class="ant-pagination-options-quick-jumper"
      >
        Goto
        <input
          type="text"
          value=""
        />
      </div>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-large"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 50 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-lg ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-lg ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-small"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-small"
    unselectable="unselectable"
  >
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-options"
    >
      <span
        class="ant-pagination-options-label"
      >
        Items / page
      </span>
      <div
        class="ant-select-sm ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="opacity:1"
              title="10"
            >
              10
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <i
                class="icon icon-arrow_drop_down"
              />
              <b />
            </span>
          </div>
        </div>
        <div
          class="ant-select-underline"
        >
          <span
            class="ant-select-ripple"
          />
        </div>
      </div>
      <div
        class="ant-pagination-options-quick-jumper"
      >
        Goto
        <input
          type="text"
          value=""
        />
      </div>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-small"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 50 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-sm ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/tiny.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination ant-pagination-tiny"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-options"
    >
      <span
        class="ant-pagination-options-label"
      >
        Items / page
      </span>
      <div
        class="ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="opacity:1"
              title="10"
            >
              10
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <i
                class="icon icon-arrow_drop_down"
              />
              <b />
            </span>
          </div>
        </div>
        <div
          class="ant-select-underline"
        >
          <span
            class="ant-select-ripple"
          />
        </div>
      </div>
    </li>
    <li
      class="ant-pagination-total-text"
    >
      1 - 10 / 50
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-first"
      title="First Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-first_page"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-last"
      tabindex="0"
      title="Last Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-last_page"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-tiny"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-options"
    >
      <span
        class="ant-pagination-options-label"
      >
        Items / page
      </span>
      <div
        class="ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="opacity:1"
              title="10"
            >
              10
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <i
                class="icon icon-arrow_drop_down"
              />
              <b />
            </span>
          </div>
        </div>
        <div
          class="ant-select-underline"
        >
          <span
            class="ant-select-ripple"
          />
        </div>
      </div>
      <div
        class="ant-pagination-options-quick-jumper"
      >
        Goto
        <input
          type="text"
          value=""
        />
      </div>
    </li>
    <li
      class="ant-pagination-total-text"
    >
      1 - 10 / 50
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-first"
      title="First Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-first_page"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-last"
      tabindex="0"
      title="Last Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-last_page"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
  <ul
    class="ant-pagination ant-pagination-tiny"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-options"
    >
      <span
        class="ant-pagination-options-label"
      >
        Items / page
      </span>
      <div
        class="ant-pagination-options-size-changer ant-select ant-select-has-value ant-select-enabled"
      >
        <div
          aria-autocomplete="list"
          aria-expanded="false"
          aria-haspopup="true"
          class="ant-select-selection
            ant-select-selection--single"
          role="combobox"
          tabindex="0"
        >
          <div
            class="ant-select-selection__rendered"
          >
            <div
              class="ant-select-selection-selected-value"
              style="opacity:1"
              title="10"
            >
              10
            </div>
            <span
              class="ant-select-arrow"
              style="user-select:none;-webkit-user-select:none"
              unselectable="unselectable"
            >
              <i
                class="icon icon-arrow_drop_down"
              />
              <b />
            </span>
          </div>
        </div>
        <div
          class="ant-select-underline"
        >
          <span
            class="ant-select-ripple"
          />
        </div>
      </div>
    </li>
    <li
      class="ant-pagination-total-text"
    >
      Total 50 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-first"
      title="First Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-first_page"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-last"
      tabindex="0"
      title="Last Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-last_page"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/pagination/demo/total.md correctly 1`] = `
<div>
  <ul
    class="ant-pagination"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      Total 85 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
  <br />
  <ul
    class="ant-pagination"
    unselectable="unselectable"
  >
    <li
      class="ant-pagination-total-text"
    >
      1-20 of 85 items
    </li>
    <li
      aria-disabled="true"
      class="ant-pagination-disabled ant-pagination-prev"
      title="Previous Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
      tabindex="0"
      title="1"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          1
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-2"
      tabindex="0"
      title="2"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          2
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-3"
      tabindex="0"
      title="3"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          3
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-4"
      tabindex="0"
      title="4"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          4
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      class="ant-pagination-item ant-pagination-item-5"
      tabindex="0"
      title="5"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-flat"
        type="button"
      >
        <a>
          5
        </a>
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
    <li
      aria-disabled="false"
      class=" ant-pagination-next"
      tabindex="0"
      title="Next Page"
    >
      <button
        class="ant-btn ant-btn-circle ant-btn-icon-only ant-btn-flat"
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
        <div
          class="ant-ripple-wrapper"
        />
      </button>
    </li>
  </ul>
</div>
`;
